...
  subtitleColor,
  onClose,
  closeIcon = 'close-outline',
  closeColor,
  rightAccessory,
  leftAccessory,
  accessibilityLabel = 'Close',
}) {
  const { colors } = useTheme();
  const subtitleTextColor = subtitleColor || colors.primary;

  return (
    <View style={styles.header}>
...
